Fix link block issue on mobile

--- a/src/styles/content.module.css
+++ b/src/styles/content.module.css
@@ -54,6 +54,7 @@
 }
 .hotlines a {
   color: khaki;
+  text-decoration: underline;
 }
 
 .contact {
