--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -13,6 +13,10 @@ p {
   margin-bottom: 1rem;
 }
 
+a {
+  box-shadow: none;
+}
+
 .container {
   display: flex;
   flex-flow: row wrap;
